<resources>
    <string name="app_name">Shameless Self Promo</string>
    <string name="send_message">Send Message</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="display_name">Display Name</string>
    <string name="immediate_start">Immediate Start</string>
    <string name="preview_message">Preview Message</string>
    <string name="include_junior">Include \'Junior\'</string>
    <string name="available_from_date">Available from date</string>
</resources>