<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_name"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:text="Example Name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contact_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_contact_number"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                tools:text="+1 1112223333" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/display_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_my_display_name"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:text="Kwan Jung" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_box_junior"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/include_junior" />

        <Spinner
            android:id="@+id/spinner_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/check_box_immediate_start"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/immediate_start" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/available_from_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_start_date"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                tools:text="01/06/2023" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_preview"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/preview_message" />

    </LinearLayout>

</ScrollView>